--- a/barman/barman.conf
+++ b/barman/barman.conf
@@ -2,8 +2,9 @@
 description = "Main PostgreSQL server"
 backup_method = rsync
 retention_policy = REDUNDANCY 2
-conninfo = host=10.244.0.219 port=5432 user=postgres dbname=postgres password=postgres
-ssh_command = 'ssh postgres@10.244.0.219'
+conninfo = host=10.109.96.19 port=5432 user=postgres dbname=postgres password=postgres
+ssh_command = 'ssh postgres@10.244.0.235'
+archiver = on
 
 [barman]
 barman_user = barman
