--- a/postgres/postgresql.conf
+++ b/postgres/postgresql.conf
@@ -234,9 +234,12 @@ min_wal_size = 80MB
 
 # - Archiving -
 
-#archive_mode = off		# enables archiving; off, on, or always
-				# (change requires restart)
-#archive_command = ''		# command to use to archive a logfile segment
+archive_mode = on
+archive_command = 'sshpass -p "barman" rsync -a %p barman@barman-service.default.svc.cluster.local:/var/lib/barman/archive/%f'
+wal_level = replica
+max_wal_senders = 3
+
+	# command to use to archive a logfile segment
 				# placeholders: %p = path of file to archive
 				#               %f = file name only
 				# e.g. 'test ! -f /mnt/server/archivedir/%f && cp %p /mnt/server/archivedir/%f'
@@ -780,8 +783,4 @@ default_text_search_config = 'pg_catalog.english'
 #------------------------------------------------------------------------------
 
 # Add settings for extensions here
-archive_mode = on
-wal_level = 'replica'
-max_wal_senders = 2
-wal_keep_segments = 64
-archive_command = 'barman-wal-archive backup pg %p'
+	
