--- a/postgres/postgres-deployment.yaml
+++ b/postgres/postgres-deployment.yaml
@@ -1,9 +1,3 @@
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: postgres-config
-data:
-
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -25,7 +19,7 @@ spec:
         image: postgres:13
         ports:
         - containerPort: 5432
-        - containerPort: 22  # Add this line to expose SSH
+        - containerPort: 22  # Expose SSH
         env:
         - name: POSTGRES_USER
           value: "postgres"
@@ -37,7 +31,8 @@ spec:
         - name: postgres-storage
           mountPath: /var/lib/postgresql/data
         - name: postgres-config-volume
-          mountPath: /etc/postgresql
+          mountPath: /etc/postgresql/postgresql.conf
+          subPath: postgresql.conf
       volumes:
       - name: postgres-storage
         persistentVolumeClaim:
@@ -57,3 +52,24 @@ spec:
   resources:
     requests:
       storage: 1Gi
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: pg-minikube-postgresql
+  labels:
+    app: postgres
+spec:
+  selector:
+    app: postgres
+  ports:
+    - name: postgres
+      protocol: TCP
+      port: 5432
+      targetPort: 5432
+    - name: ssh
+      protocol: TCP
+      port: 22
+      targetPort: 22
+  type: ClusterIP
